@@ -1,3 +1,7 @@
+2010-01-31  Jeroen T. Vermeulen <jtv@xs4all.nl>
+ include/pqxx/result.hxx, src/result.cxx:
+ - Added empty()
+ - Documented risk of empty slices triggering bugs.
 2010-01-24  Jeroen T. Vermeulen <jtv@xs4all.nl>
  aclocal.m4:
  - Still struggling to get everything needed for ./configure into the repo.
